--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "vue": "^2.5.22",
-    "vue-router": "^3.0.1"
+    "is-empty": "^1.2.0",
+    "v-click-outside-x": "^3.7.1",
+    "vue": "^2.5.22"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
